plugins {
    id 'application'
}

group = 'de.mm65'
version = '1.1'


application {
    mainClass = 'de.mm65.threadload.Main'
    sourceCompatibility = '1.8'
}

repositories {
    mavenCentral()
}

dependencies {
    testImplementation platform('org.junit:junit-bom:5.9.1')
    testImplementation 'org.junit.jupiter:junit-jupiter'
}

test {
    useJUnitPlatform()
}

jar {
    manifest {
        attributes(
                //'Class-Path': configurations.runtimeOnly.collect { it.getName() }.join(' '),
                'Main-Class': 'de.mm65.threadload.Main'
        )
    }
}

